Fixed section one spacing and added more info to About section

--- a/src/scss/section-two.styles/_section-two.styles.scss
+++ b/src/scss/section-two.styles/_section-two.styles.scss
@@ -151,10 +151,6 @@
 		}
 	}
 
-	.about-story-one {
-		display: none;
-	}
-
 	.about-story {
 		display: none;
 	}
@@ -185,10 +181,6 @@
 		}
 
 		.section-two-personal {
-			display: none;
-		}
-
-		.about-story-one {
 			display: none;
 		}
 
